<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
        <relativePath/>
    </parent>
    <groupId>cn.daenx</groupId>
    <artifactId>MyAdmin</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>MyAdmin</name>
    <description>MyAdmin</description>
    <modules>
        <module>myadmin-admin</module>
        <module>myadmin-framework</module>
        <module>myadmin-system</module>
        <module>myadmin-test</module>
    </modules>
    <properties>
        <java.version>17</java.version>
        <spring.boot.version>3.1.0</spring.boot.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <druid.version>1.2.18</druid.version>
        <fastjson2.version>2.0.34</fastjson2.version>
        <mybatis.plus.version>3.5.3.1</mybatis.plus.version>
        <mybatis.dynamic.datasource.version>3.6.1</mybatis.dynamic.datasource.version>
        <springDoc.version>2.1.0</springDoc.version>
        <sa-token.version>1.34.0</sa-token.version>
        <hutool.version>5.8.20</hutool.version>
        <easyexcel.version>3.3.2</easyexcel.version>
        <aws-s3.version>1.12.490</aws-s3.version>
        <oshi.core.version>6.4.3</oshi.core.version>
        <tencentcloudapi.sms.version>3.1.779</tencentcloudapi.sms.version>
        <aliyun.dysmsapi.version>2.0.23</aliyun.dysmsapi.version>
        <bouncycastle.version>1.72</bouncycastle.version>
        <orai18n.version>21.9.0.0</orai18n.version>
    </properties>
    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>dev</profiles.active>
                <logging.level>info</logging.level>
            </properties>
            <activation>
                <!-- 默认环境 -->
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <profiles.active>prod</profiles.active>
                <logging.level>warn</logging.level>
            </properties>
        </profile>
    </profiles>
    <!-- 依赖声明 -->
    <dependencyManagement>
        <dependencies>

            <!-- SpringBoot的依赖配置-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter</artifactId>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-web</artifactId>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-test</artifactId>-->
<!--                <scope>test</scope>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-aop</artifactId>-->
<!--            </dependency>-->
<!--            &lt;!&ndash; 数据校验 &ndash;&gt;-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-validation</artifactId>-->
<!--            </dependency>-->
<!--            &lt;!&ndash; quartz定时任务 &ndash;&gt;-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-quartz</artifactId>-->
<!--            </dependency>-->
            <!-- Spring重试框架 -->
<!--            <dependency>-->
<!--                <groupId>org.springframework.retry</groupId>-->
<!--                <artifactId>spring-retry</artifactId>-->
<!--            </dependency>-->
<!--            &lt;!&ndash; 健康监控 &ndash;&gt;-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-actuator</artifactId>-->
<!--            </dependency>-->
            <!-- lombok -->
<!--            <dependency>-->
<!--                <groupId>org.projectlombok</groupId>-->
<!--                <artifactId>lombok</artifactId>-->
<!--            </dependency>-->
            <!-- 通用池化框架 -->
<!--            <dependency>-->
<!--                <groupId>org.apache.commons</groupId>-->
<!--                <artifactId>commons-pool2</artifactId>-->
<!--            </dependency>-->
            <!-- 邮件收发 -->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-mail</artifactId>-->
<!--            </dependency>-->
            <!-- Mysql驱动包 -->
<!--            <dependency>-->
<!--                <groupId>com.mysql</groupId>-->
<!--                <artifactId>mysql-connector-j</artifactId>-->
<!--            </dependency>-->
<!--            &lt;!&ndash; Oracle驱动包 &ndash;&gt;-->
<!--            <dependency>-->
<!--                <groupId>com.oracle.database.jdbc</groupId>-->
<!--                <artifactId>ojdbc8</artifactId>-->
<!--            </dependency>-->
            <dependency>
                <groupId>com.oracle.database.nls</groupId>
                <artifactId>orai18n</artifactId>
                <version>${orai18n.version}</version>
            </dependency>
            <!-- PostgreSql驱动包 -->
<!--            <dependency>-->
<!--                <groupId>org.postgresql</groupId>-->
<!--                <artifactId>postgresql</artifactId>-->
<!--            </dependency>-->
            <!-- 阿里巴巴druid数据库连接池 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-3-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <!-- 阿里巴巴fastjson2 -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <!--redis依赖包-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-data-redis</artifactId>-->
<!--            </dependency>-->
            <!-- mybatis-plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis.plus.version}</version>
            </dependency>
            <!-- mybatis-plus 多数据源 -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
                <version>${mybatis.dynamic.datasource.version}</version>
            </dependency>
            <!-- springDoc 接口文档 -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springDoc.version}</version>
            </dependency>
            <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <!-- Sa-Token 整合 jwt -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-jwt</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <!-- Sa-Token 整合 Redis （使用 jackson 序列化方式） -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-dao-redis-jackson</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <!-- Hutool -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <!--常用工具类 -->
<!--            <dependency>-->
<!--                <groupId>org.apache.commons</groupId>-->
<!--                <artifactId>commons-lang3</artifactId>-->
<!--            </dependency>-->
            <!-- 阿里巴巴的easyExcel -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <!-- S3存储协议 -->
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-java-sdk-s3</artifactId>
                <version>${aws-s3.version}</version>
            </dependency>
            <!-- 获取系统信息 -->
            <dependency>
                <groupId>com.github.oshi</groupId>
                <artifactId>oshi-core</artifactId>
                <version>${oshi.core.version}</version>
            </dependency>
            <!-- 腾讯云SMS SDK -->
            <dependency>
                <groupId>com.tencentcloudapi</groupId>
                <artifactId>tencentcloud-sdk-java-sms</artifactId>
                <version>${tencentcloudapi.sms.version}</version>
            </dependency>
            <!-- 阿里云SMS SDK -->
            <dependency>
                <groupId>com.aliyun</groupId>
                <artifactId>dysmsapi20170525</artifactId>
                <version>${aliyun.dysmsapi.version}</version>
            </dependency>
            <!-- 加密包引入 -->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk15to18</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
